--- a/Strategy.dproj
+++ b/Strategy.dproj
@@ -137,6 +137,7 @@
         <DCCReference Include="Drawer.pas"/>
         <DCCReference Include="PlayerManager.pas"/>
         <DCCReference Include="CharacterDataVisualisator.pas"/>
+        <DCCReference Include="SkillManager.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
