--- a/HexSpire.dproj
+++ b/HexSpire.dproj
@@ -143,6 +143,11 @@
         <DCCReference Include="SkillManager.pas"/>
         <DCCReference Include="buildingManager.pas"/>
         <DCCReference Include="SettingsManager.pas"/>
+        <RcItem Include="C:\Users\user\Downloads\Renju.otf">
+            <ContainerId>ResourceItem</ContainerId>
+            <ResourceType>RCDATA</ResourceType>
+            <ResourceId>Renju</ResourceId>
+        </RcItem>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
@@ -181,6 +186,12 @@
                 </DeployFile>
                 <DeployFile LocalName="$(BDS)\Redist\osx32\libcgunwind.1.0.dylib" Class="DependencyModule">
                     <Platform Name="OSX32">
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="C:\Users\user\Downloads\Renju.otf" Configuration="Debug" Class="ProjectFile">
+                    <Platform Name="Win32">
+                        <RemoteDir>.\</RemoteDir>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
